[metadata]
name = podcast_feed_parser
version = 0.0.1
author = Mohammadreza Varasteh
author_email = varastehmr@gmail.com
description = A small package to parse podcast feeds for their info automatically
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/The-Daishogun/podcast_feed_parser
project_urls =
    Bug Tracker = https://github.com/The-Daishogun/podcast_feed_parser/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4==4.9.3
    lxml==4.6.3
    requests==2.25.1